2.4.5 - Fixed a bug that caused images to be displayed incorrectly when sending two messages at the same time - Fixed a bug that caused multiple images to be displayed incorrectly when sending multiple copies of the same link in a single message - Fixed a bug where it was not possible to reconnect to Discord when opening a local world to the network after re-entering the world